// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsdBalance renders component 1`] = `
<WithStyles(ForwardRef(Typography))
  className="value-mock"
  variant="h5"
>
  $ 
  3,243.25
   USD
</WithStyles(ForwardRef(Typography))>
`;

exports[`UsdBalance renders when no value 1`] = `
<WithStyles(ForwardRef(Typography))
  className="value-mock"
  variant="h5"
>
  $ 
  -
   USD
</WithStyles(ForwardRef(Typography))>
`;
